# From-Zero-to-AI-Generalist--A-Full-Stack-Journey

./: .gitignore  Dockerfile  LICENSE  main.py  mkdocs.yaml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker.yml  gh-deploy.yml  test.yml
01-twitter-sentiment-analysis/: main.py  pyproject.toml
01-twitter-sentiment-analysis/notebook/: 01-preprocess.ipynb
