[project]
name = "from-zero-to-ai-generalist-a-full-stack-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
]

[tool.uv.workspace]
members = ["01-twitter-sentiment-analysis"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
